--- a/SupermarketWPF/SupermarketWPF/SupermarketWPF.csproj
+++ b/SupermarketWPF/SupermarketWPF/SupermarketWPF.csproj
@@ -205,4 +205,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>powershell -Command "if (Get-Process SupermarketWPF -ErrorAction SilentlyContinue) { Stop-Process -Name SupermarketWPF -Force }"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
