--- a/SupermarketWPF/SupermarketWPF/SupermarketWPF.csproj
+++ b/SupermarketWPF/SupermarketWPF/SupermarketWPF.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -108,6 +109,7 @@
     <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\ProducatoriVM.cs" />
     <Compile Include="ViewModels\ProduseVM.cs" />
+    <Compile Include="ViewModels\StocuriVM.cs" />
     <Compile Include="View\AdministratorView.xaml.cs">
       <DependentUpon>AdministratorView.xaml</DependentUpon>
     </Compile>
@@ -119,6 +121,9 @@
     </Compile>
     <Compile Include="View\ProduseView.xaml.cs">
       <DependentUpon>ProduseView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\StocuriView.xaml.cs">
+      <DependentUpon>StocuriView.xaml</DependentUpon>
     </Compile>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -147,6 +152,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\ProduseView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\StocuriView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
